HALG: Typos in notes

--- a/2021_22/HALG/notes/notes.tex
+++ b/2021_22/HALG/notes/notes.tex
@@ -14,7 +14,7 @@
 \subsection{Solutions of simultaneous linear equations}
 
 \begin{definition}
-	Let $F$ be a field. A \emph{finitely generated}h{system of linear equations} with $n$ equations and
+	Let $F$ be a field. A \emph{finitely generated system of linear equations} with $n$ equations and
 	$m$ unknowns are equations
 	\begin{align*}
 		a_{11}x_1 + a_{12}x_2 + \cdots + a_{1m}x_m & = b_1 \\
@@ -77,7 +77,7 @@
 
 \begin{lemma}[Lemma 1.2.4]
 	If $V$ is a vector space over a field $F$, then $\lambda\vec 0=\vec 0$
-	for all $\lambda F$. Further, if $\lambda\vec v=\vec 0$ then either
+	for all $\lambda\in F$. Further, if $\lambda\vec v=\vec 0$ then either
 	$\lambda =0$ or $\vec v =\vec 0$.
 \end{lemma}
 
@@ -180,7 +180,7 @@
 \end{definition}
 
 \begin{theorem}[Theorem 1.5.16]
-	Let $F$ be a field, $V$ and $F$-vector space and $(\vec v_i)_{i\in I}$ a
+	Let $F$ be a field, $V$ an $F$-vector space and $(\vec v_i)_{i\in I}$ a
 	family of vectors from $V$. The following are equivalent:
 	\begin{enumerate}
 		\item The family $(\vec v_i)_{i\in I}$ is a basis for $V$,
